networkPolicy/limit-to-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: limit-api-traffic
spec:
  podSelector:
    matchLabels:
      app: bookstore
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: bookstore
    ports:
    - protocol: TCP
      port: 80
